# azure-udr-generator

./: .flake8  .gitignore  README.md  create-udr.py  create_udr.py  data.csv  generate-udr.py  generate_tf.py  generate_udr.py  pyproject.toml  requirements.txt  test.py
models/: data.py
scripts/: create_udr.py  generate_udr.py
templates/: tf_route_table.j2  tf_route_table_arm.j2
tf_files/: routeTables.tf
tools/: log.py
