[tool.poetry]
name = "azure-udr-generator"
version = "0.1.0"
description = "Generates Azure UDRs from csv file"
authors = ["gertzakis <gertzakis@gmail.com>"]
license = "Apache"
readme = "README.md"
packages = [{include = "azure_udr_generator"}]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^3.1.2"
funcy = "^1.17"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
pydocstyle = "^6.1.1"
bandit = "^1.7.4"
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pydocstyle]
convention = "google"
inherit = false
match = "(?!__init__).*\\.py"
match-dir = "(?!tests|migrations|development)[^\\.].*"
# D212 is enabled by default in google convention, and complains if we have a docstring like:
# """
# My docstring is on the line after the opening quotes instead of on the same line as them.
# """
# We've discussed and concluded that we consider this to be a valid style choice.
add_ignore = "D212"