[tool.poetry]
name = "azure-udr-generator"
version = "0.1.0"
description = "Generates Azure UDRs from csv file"
authors = ["gertzakis <gertzakis@gmail.com>"]
license = "Apache"
readme = "README.md"
packages = [{ include = "azure_udr_generator" }]

[tool.poetry.dependencies]
python = "^3.11"
Jinja2 = "^3.1.2"
funcy = "^1.17"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
bandit = "^1.7.4"
pylint = "^2.15.5"
ruff = "^0.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pydocstyle
    "D",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
